@@ -1,4 +1,7 @@
-
+10/09/09
+   Fixed Pac7311 (-eagain)
+   Fixed controls
+   
 5/10/08 
    Beta Release
    Todo: Lot of things...
